prevent button wrap on mobile, closes #27

--- a/css/main.css
+++ b/css/main.css
@@ -108,10 +108,6 @@ body {
     font-size: 16px;
   }
 
-  #libraries button {
-    font-size: 9px;
-  }
-
   .entry {
     height: 120px;
   }
@@ -119,6 +115,18 @@ body {
   .entry .name {
     font-size: 12px;
   }
+}
+
+@media screen and (max-width: 480px) {
+
+  #libraries button {
+    max-width: 50px;
+    font-size: 9px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
 }
 
 .copied {
